--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -15,6 +15,7 @@ page.nav.logout=Logout
 page.nav.signin=Sign in
 page.nav.signup=Sign up
 page.nav.language=Language
+page.nav.support=Support
 
 main.page.propose=A website that will help you study biology
 main.page.functions=Features of the site
