--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -15,6 +15,7 @@ page.nav.logout=Выйти
 page.nav.signin=Войти
 page.nav.signup=Регистрация
 page.nav.language=Язык
+page.nav.support=Помощь
 
 main.page.propose=Сайт, который поможет тебе в обучении в сфере биологии
 main.page.functions=Функции сайта
