--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -26,3 +26,7 @@ main.page.tests=Тесты
 main.page.tests.propose=Проверить свои полученные знания
 main.page.news=Новости
 main.page.news.propose=Возможность почитать новости о биологии и образовании
+
+errors.incorrect.email=Введите корректный email
+errors.null.age=Необходимо указать возраст
+errors.incorrect.age=Люди столько не живут
